# mlops_demo

./: .gitignore  PHASE_1_README.md  PHASE_2_README.md  README.md  RUNBOOK.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
artifacts/reports/: .gitignore
data/ieee_fraud_detection/: .gitignore
data/ieee_fraud_detection/preprocessing/: .gitignore
src/data/: prepare_ieee_data.py  smart_preprocess_ieee.py
src/train/: train_ieee_models.py
